# fastapi_template

./: README.md  env.py  pyproject.toml
app/services/: __init__.py
app/utils/: logger.py
